--- a/estilos.css
+++ b/estilos.css
@@ -9,6 +9,7 @@
 body{
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
+    
 }
 
 header{
@@ -33,9 +34,62 @@ header{
     margin-right: 10px;
 }
 
+.navbar a{
+    display: block;
+    padding: 20px 20px;
+    color: #fff;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-size: 20px;
+}
+
+.logo{
+    margin-left: 30px;
+}
+
 .logo a{
     text-decoration: none;
     color: #fff;
     text-transform: uppercase;
     font-size: 20px;
+}
+
+.navbar a:hover{
+    background: #3f3f3f;
+}
+
+.header{
+    height: 60vh !important;
+    background: url(img/ueilrvjzphbc1.webp) no-repeat center;
+    background-size: cover;
+}
+
+.title{
+    margin-bottom: 40px;
+    font-size: 60px;
+    font-weight: 600;
+    text-transform: uppercase;
+    color: #fff;
+}
+
+.p{
+    margin-bottom: 40px;
+    font-size: 18px;
+}
+
+.content{
+    font-size: 20px;
+    height: 50vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: #fff;
+}
+
+.historia {
+    background: #3f3f3f;
+}
+.historia h2{
+    
 }
