--- a/css/menu.css
+++ b/css/menu.css
@@ -7,27 +7,39 @@
     vertical-align: baseline;
 }
 
-body{
+body {
     text-align: center;
-    font-family: Arial, Helvetica, sans-serif;
-    
+    font-family: 'Oswald', sans-serif;
+    background-color: #410101;
+    background-image: linear-gradient(to right, #410101, #0B0614);
+    background-image: -o-linear-gradient(to right, #410101, #0B0614);
+    display: block;
 }
+
 .head{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    height: 63px;
-    /*background: #410101;*/
-    background-color: #410101;
-    background-image: linear-gradient(to right, #410101, #0B0614);
+    height: 78px;
+    /*background-color: #410101;
+    background-image: linear-gradient(to right, #410101, #0B0614);*/
     position: fixed;
     width: 100%;
     z-index: 100;
+    transition: 0.7s;
+}
+
+#miDiv.abajo {
+    background-color: #410101;
+    background-image: linear-gradient(to right, #410101, #0B0614);
+    padding: 1px;
+    transition: 1.5s;
 }
 
 .navbar{
     display: flex;
     margin-right: 10px;
+    text-shadow: 3px 3px 5px rgba(0, 0, 0, 0.7);
 }
 
 .navbar a{
@@ -36,7 +48,10 @@ body{
     color: #fff;
     text-decoration: none;
     text-transform: uppercase;
-    font-size: 20px;
+    font-size: 25px;
+    border-left: 1px solid white;
+    border-right: 1px solid white;
+    letter-spacing: 2px;
 }
 
 .logo{
@@ -53,6 +68,18 @@ body{
 .navbar a:hover{
     background-color: #C89588;
     background-image: linear-gradient(to right, #C89588, #5A4C5D);
-    
+}
+
+.icono{
+    width: 60px;
+    height: auto;
+}
+
+.MouseEncima{
+    filter:grayscale(100%);
+}
+
+.MouseEncima:hover{
+    filter:grayscale(0%);
 }
 
